Corregido nombre de tag

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <dalo></dalo>
+    <dalo-12></dalo-12>
 </body>
-<script src"fragmento.js"></script>
-</script>
+<script src="./fragmento.js"></script>
 </html>
