--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <body>
     <dalo-12></dalo-12>
 </body>
-<script src="./fragmento.js"></script>
+<script src="./fragmento.js" async></script>
 </html>
